# rl-teacher-torch

./: .gitignore  README.md  devnotes.md  pyproject.toml
src/: api_example.py  pyproject.toml
src/DRLHP/: __init__.py  comparison_collectors.py  label_schedules.py  nn.py  segment_sampling.py  summaries.py  teach.py  train.py  video.py
src/drlhp/: label_schedules.py  nn.py  reward_predictor.py  summaries.py  transform.py  wrapper.py
src/human_feedback_api/: __init__.py  models.py  views.py
src/human_feedback_api/migrations/: 0015_alter_comparison_id.py
src/human_feedback_site/: settings.py  urls.py  wsgi.py
